# otv2-pl

./: CMakeLists.txt  readme.md
src/: Vendor.hpp
src/primal/runtime/: RuntimeEngine.cpp  RuntimeEngine.hpp
src/primal/runtime/reconstructor/: Reconstructor.hpp
src/primal/runtime/reconstructor/reconstructors/: IATReconstructor.cpp  IATReconstructor.hpp  RelocReconstructor.cpp  RelocReconstructor.hpp
src/primal/segment/: SegmentTranslator.hpp
src/primal/segment/internal/: SegmentProvider.hpp
src/primal/util/: CommonUtil.cpp  CommonUtil.hpp  PanicUtil.cpp  PanicUtil.hpp
src/primal/util/stuff/: RuntimeDefinitions.cpp  RuntimeDefinitions.hpp  Singleton.hpp
src/segment/data/: OneSegment.cpp  OneSegment.hpp
src/segment/data/sections/: IAT.cpp  Reloc.cpp  SectionAccessor.hpp
src/segment/internal/: SegmentInterpreter.hpp
src/segment/internal/framework/: OneEngine.cpp  OneEngine.hpp
src/segment/internal/framework/sdk/game/memory/: VirtualReflectionHandler.cpp  VirtualReflectionHandler.hpp
src/segment/loader/accessors/: ConfigurationAccessor.cpp  ConfigurationAccessor.hpp  LanguageAccessor.cpp  LanguageAccessor.hpp
src/segment/loader/bootstrap/: Bootstrap.cpp  BootstrapTaskController.cpp  BootstrapTaskController.hpp
src/segment/loader/callback/: CallbackManager.cpp  CallbackManager.hpp
src/segment/loader/ui/: UIBridge.cpp  UIBridge.hpp  UIRenderer.cpp  UIRenderer.hpp
src/segment/loader/util/: DiscordRPC.cpp  DiscordRPC.hpp
